# aslib-template

./: CMakeLists.txt  COPYING  README.md  hello-config.cmake.in  hello-modules.cmake.in  libhello.pc.in
src/: CMakeLists.txt  hello.cc
test/: CMakeLists.txt  vec_test.cc
